--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ jsonlines>=1.2.0
 Keras-Applications>=1.0.8
 Keras-Preprocessing>=1.1.0
 kiwisolver>=1.2.0
-lmdb>=0.94
+lmdb==0.94
 Markdown>=3.2.1
 matplotlib>=3.2.0
 msgpack>=1.0.0
@@ -66,7 +66,7 @@ tensorboard==1.15.0
 tensorboardX==1.8
 tensorflow==1.15.2
 tensorflow-estimator==1.15.1
-tensorpack>=0.11
+tensorpack==0.9.4
 termcolor>=1.1.0
 tokenizers>=0.10.1
 toolz>=0.10.0
